--- a/16_Shop_MultiProduct/Views/Product/List.cshtml
+++ b/16_Shop_MultiProduct/Views/Product/List.cshtml
@@ -143,7 +143,7 @@
                         <span class="text">Sidebar</span>
                         <a href="#" class="close-block-sidebar"><i class="fa fa-times" aria-hidden="true"></i></a>
                     </div>
-                    <div class="widget woocommerce widget_product_categories">
+                    @*<div class="widget woocommerce widget_product_categories">
                         <h2 class="widgettitle">Danh mục sản phẩm<span class="arrow"></span></h2>
                         <ul class="product-categories">
                             @foreach (var item in commonInfo.ProductCategoryList)
@@ -160,7 +160,7 @@
                             }
 
                         </ul>
-                    </div>
+                    </div>*@
 
                     @if (commonInfo.ProductGroupList.Count() > 0)
                     {
