--- a/16_Shop_MultiProduct/Views/Shared/article/_MenuAndAdsPartial.cshtml
+++ b/16_Shop_MultiProduct/Views/Shared/article/_MenuAndAdsPartial.cshtml
@@ -19,7 +19,7 @@
             <a href="#" class="close-block-sidebar"><i class="fa fa-times" aria-hidden="true"></i></a>
         </div>
         <div class="widget widget_categories">
-            <h2 class="widgettitle">Browse Categories<span class="arrow"></span></h2>
+            <h2 class="widgettitle">Danh mục<span class="arrow"></span></h2>
             <ul>
                 @foreach (var item in categoryList)
                 {
