update theme 16, clear css, clear js, updte pruduct detail

--- a/16_Shop_MultiProduct/Views/Product/Checkout.cshtml
+++ b/16_Shop_MultiProduct/Views/Product/Checkout.cshtml
@@ -50,14 +50,14 @@
 
                                         <th>Đơn giá</th>
                                         <th>Số lượng</th>
-                                        <th>Tổng</th>
+                                        @*<th>Tổng</th>*@
                                         <th class="action"><i class="fa fa-trash-o"></i></th>
                                     </tr>
                                 </thead>
                                 <tbody id="prCatCtTable"></tbody>
                                 <tfoot>
                                     <tr>
-                                        <td colspan="2" rowspan="2"></td>
+                                        
                                         <td colspan="3">Tổng giá sản phẩm </td>
                                         <td colspan="2" id="ttPrCt"></td>
                                     </tr>
